--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "firebase-admin": "^5.8.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
